# lsb_backend_api

./: .env.example  .gitignore  Dockerfile  docker-compose.local.yml  docker-compose.yml  lsb.h5  main.py  pyproject.toml  readme.md  requirements.txt
config/: init.sql
src/: __init__.py  app.py  main.py
src/middlewares/: jwt.py  users_check.py
src/models/: audit.py  models.py  module.py  permission.py  response.py  role.py  user.py  video.py  word.py  wordvideo.py
src/modules/user/controllers/: __init__.py  user_v1.py
src/modules/user/dto/: __init__.py  user_filter.py
src/modules/user/models/: user.py  user_schema.py
src/modules/user/services/: user_service.py
src/modules/user/utils/: constants.py  exceptions.py
src/routes/api/: __init__.py
src/routes/api/v1/: __init__.py  auth.py  permissions.py  role.py  translate.py  users.py  video.py  words.py
src/services/: auth_service.py  mail_service.py
src/templates/: mail.html
src/test/: auth.http  role.http  users.http
src/utils/: generate_pass.py  passwords.py  roles.py  s3.py  users.py  validators.py  video.py
static/points/gracias/0/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
static/points/gracias/1/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
static/points/gracias/10/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
static/points/gracias/11/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  (+20 more)
tests/: test_project.py  test_roles.py  test_words.py
(+2155 files in other folders)
