[tool.poetry]
name = "lsb_backend_api"
version = "0.1.0"
description = ""
authors = ["Andres Copeticona <andrescopeticona@outlook.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
mysqlclient = "^2.2.4"
pyjwt = "^2.9.0"
pytz = "^2024.1"
flask-cors = "^4.0.1"
mediapipe = "^0.10.14"
boto3 = "^1.34.157"
jsonschema = "^4.23.0"
tensorflow = "2.16.1"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
